--- a/PageObjectModel/test-output/old/Suite/methods.html
+++ b/PageObjectModel/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="826d77">  <td>20/02/10 02:12:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:testOption.textRunner@3b2da18f]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2041416495</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>20/02/10 02:12:25</td>   <td>673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:testOption.textRunner@3b2da18f]">feature</td> 
-  <td>main@2041416495</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>20/02/10 02:12:25</td>   <td>825</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testOption.textRunner@3b2da18f]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2041416495</td>   <td></td> </tr>
+<tr bgcolor="8ff1a8">  <td>20/02/10 10:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:testOption.textRunner@3d299e3]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@331418503</td>   <td></td> </tr>
+<tr bgcolor="8ff1a8">  <td>20/02/10 10:40:19</td>   <td>739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:testOption.textRunner@3d299e3]">feature</td> 
+  <td>main@331418503</td>   <td></td> </tr>
+<tr bgcolor="8ff1a8">  <td>20/02/10 10:41:09</td>   <td>50912</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testOption.textRunner@3d299e3]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@331418503</td>   <td></td> </tr>
 </table>
